// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as a link if the href attribute is supplied 1`] = `
<span
  class="badge"
  href="#bar"
>
  foo
</span>
`;

exports[`renders multiple variations 1`] = `
<span
  class="badge badge--primary"
>
  foo
</span>
`;

exports[`renders the base badge 1`] = `
<span
  class="badge"
>
  foo
</span>
`;

exports[`renders the danger variation 1`] = `
<span
  class="badge badge--danger"
>
  foo
</span>
`;

exports[`renders the info variation 1`] = `
<span
  class="badge badge--info"
>
  foo
</span>
`;

exports[`renders the inverse variation 1`] = `
<span
  class="badge badge--inverse"
>
  foo
</span>
`;

exports[`renders the naked variation 1`] = `
<span
  class="badge"
>
  foo
</span>
`;

exports[`renders the outline variation 1`] = `
<span
  class="badge"
>
  foo
</span>
`;

exports[`renders the primary variation 1`] = `
<span
  class="badge badge--primary"
>
  foo
</span>
`;

exports[`renders the small variation 1`] = `
<span
  class="badge"
>
  foo
</span>
`;

exports[`renders the success variation 1`] = `
<span
  class="badge badge--success"
>
  foo
</span>
`;

exports[`renders the warning variation 1`] = `
<span
  class="badge badge--warning"
>
  foo
</span>
`;

exports[`renders the white variation 1`] = `
<span
  class="badge badge--white"
>
  foo
</span>
`;
